# tax-man

./: .gitignore  README.md  REPO-EVALUATION.md  TODO.md  pyproject.toml
docs/: rollover-2026.md
docs/irs/: child-tax-credit-schedule-8812.md  colorado-form-104-instructions.md  fbar-fincen-114-foreign-accounts.md  form-1040-es-estimated-tax.md  form-1040-instructions.md  form-2555-instructions.md  form-4868-extension.md  form-6251-amt.md  form-7206-se-health-insurance.md  form-8829-home-office.md  form-8863-education-credits.md  form-8938-fatca.md  form-8959-8960-surtax-instructions.md  form-8962-premium-tax-credit.md  form-8995-qbi-instructions.md  obbba-tax-provisions.md  pub-334-small-business-guide.md  pub-463-travel-gift-car.md  pub-502-medical-expenses.md  pub-505-estimated-tax.md  pub-519-tax-guide-aliens.md  pub-526-charitable-contributions.md  pub-527-rental-property.md  pub-535-business-expenses.md  pub-54-us-citizens-abroad.md  (+17 more)
payments-2026/: README.md
plans/: implementation-prompt.md  issue-2-session-resume.md  issue-3-export-command.md  issue-4-document-parsing-integration.md  issue-5-pdf-field-validation.md
taxman/: __init__.py  calculator.py  colorado.py  constants.py  fill_forms.py  models.py  parse_documents.py  reports.py  rollover.py  validation.py
tests/: conftest.py  test_calculator.py  test_cli_commands.py  test_colorado.py  test_field_mappings.py  test_fill_forms.py  test_headless.py  test_integration.py  test_models.py  test_parse_documents.py  test_rollover.py  test_serialization.py  test_validation.py  test_wizard_parsing.py
(+21 files in other folders)
