[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends.build"

[project]
name = "taxman"
version = "0.1.0"
description = "2025 US federal tax return preparation engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "PyPDFForm>=1.4",
    "rich>=13.0",
    "questionary>=2.0",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
taxman = "taxman.cli.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require IRS PDF forms on disk (deselect with '-m \"not slow\"')",
]
